--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Color Matching Game</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="font-sans text-center bg-cover bg-center justify-center items-center" style="background-image: url('/WhatsApp Image 2024-03-16 at 23.01.50_6002df19.jpg');">
+<body class="font-sans text-center bg-cover bg-center justify-center items-center" style="background-image: url('/bg.jpg');">
     <br/><div id="colorDisplay" class="w-60 h-60 mx-auto rounded-full shadow-md"></div><br/>
     <button onclick="newColor()" class="text-white text-lg px-8 py-3 bg-green-500 rounded-lg hover:bg-green-700 transition-colors duration-300">New Color</button><br><br>
     <input type="text" id="colorGuess" class="text-lg px-4 py-2 w-72 mb-4 rounded-lg border border-gray-300" placeholder="Guess the color">
